Alter Alert Ack js script

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -238,7 +238,7 @@
             
             function Acknowledge(alertID)
             {
-                var url = "{{ path('Alert_Ack') }}"+alertID;
+                var url = "{{ path('Alert_Ack') }}/"+alertID;
                 //route.replace("ALERT_ID_PLACEHOLDER", alertID);
                 $.post(url);
                 
