--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -198,7 +198,7 @@
                     alertNumber=0;
                 } else if(alertData && alertCurrent !== alertNumber){
                     loadAlertModal(alertData, alertNumber);
-                } else if(alertData && alertCurrentLength != alertData.length){
+                } else if(alertData && alertCurrentLength !== alertData.length){
                     loadAlertModal(alertData, alertNumber);
                 }
             }
@@ -207,13 +207,13 @@
             {        
                 if(alerts.length <= 1)
                 {
-                    $('#mainModalFooter').html('<button type="button" class="btn btn-primary">Acknowledge</button>');
+                    $('#mainModalFooter').html('<button type="button" class="btn btn-primary" onclick="Acknowledge('+alerts[i].id+');">Acknowledge</button>');
                 } else {
                     if(i-1 < 0)
                     {
-                        $('#mainModalFooter').html('<button type="button" class="btn btn-default" id="alerts-next" onclick="nextAlert();">Next</button><button type="button" class="btn btn-primary">Acknowledge</button>');
+                        $('#mainModalFooter').html('<button type="button" class="btn btn-default" id="alerts-next" onclick="nextAlert();">Next</button><button type="button" class="btn btn-primary" onclick="Acknowledge('+alerts[i].id+');">Acknowledge</button>');
                     } else if(i+1 >= alerts.length) {
-                        $('#mainModalFooter').html('<button type="button" class="btn btn-default" id="alerts-previous" onclick="previousAlert();">Previous</button><button type="button" class="btn btn-primary">Acknowledge</button>');
+                        $('#mainModalFooter').html('<button type="button" class="btn btn-default" id="alerts-previous" onclick="previousAlert();">Previous</button><button type="button" class="btn btn-primary" onclick="Acknowledge('+alerts[i].id+');">Acknowledge</button>');
                     } else {
                         $('#mainModalFooter').html('<button type="button" class="btn btn-default" id="alerts-previous" onclick="previousAlert();">Previous</button><button type="button" class="btn btn-default" id="alerts-next" onclick="nextAlert();">Next</button><button type="button" class="btn btn-primary" onclick="Acknowledge('+alerts[i].id+');">Acknowledge</button>');    
                     }
