--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -243,9 +243,9 @@
                 {
                     if (i > 10)
                     {
-                        $('#ups'+ups.id+'ModalLabel').html("UPS " + ups.id + " " + ups.name);
-                        $('#ups'+ups.id+'ModalBody').html("Status: " + ups.status + "<br>Location: " + ups.location);
-                        $('#ups'+ups.id+'Modal').modal('show');
+                        //$('#ups'+ups.id+'ModalLabel').html("UPS " + ups.id + " " + ups.name);
+                        //$('#ups'+ups.id+'ModalBody').html("Status: " + ups.status + "<br>Location: " + ups.location);
+                        //$('#ups'+ups.id+'Modal').modal('show');
                     }
                     //$('#ups-'+ups.id).html(statusString);
                 }
