--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -243,8 +243,11 @@
                 var url = "{{ path('Alert_Ack') }}/"+alertID;
                 $.post(url);
                 AlertUpdate()
-                if(alertData.length -1 > alertNumber)
+                if(alertData.length-1 > alertNumber)
                 {
+                    loadAlertModal(alertData, alertNumber);
+                } else if(alertData.length-1 === alertNumber) {
+                    alertNumber = alertNumber-1;
                     loadAlertModal(alertData, alertNumber);
                 } else {
                     $('#mainModal').modal('hide');
