Attempt to apply modal style

--- a/app/Resources/views/3-9.html.twig
+++ b/app/Resources/views/3-9.html.twig
@@ -12,7 +12,7 @@
 <div class="modal fade" id="mainModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" id="mainModalDialog" role="document">
     <div class="modal-content" id="mainModalContent">
-      <div class="modal-header">
+      <div class="modal-header" id="mainModalHeader">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title" id="mainModalLabel">Title</h4>
       </div>
