--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="{{ asset('assets/vendor/bootstrap/dist/css/bootstrap.min.css') }}">
 <link rel="stylesheet" href="{{ asset('assets/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css') }}" />
 <link rel="stylesheet" href="{{ asset('assets/vendor/easy-autocomplete/easy-autocomplete.min.css') }}" />
+<link rel="stylesheet" href="{{ asset('assets/css/boostrap-dialog.min.css') }}" />
 <style>
 .severity1 {
     background-color: #E50D00;
@@ -218,10 +219,10 @@
                         $('#mainModalFooter').html('<button type="button" class="btn btn-default" id="alerts-previous" onclick="previousAlert();">Previous</button><button type="button" class="btn btn-default" id="alerts-next" onclick="nextAlert();">Next</button><button type="button" class="btn btn-primary" onclick="Acknowledge('+alerts[i].id+');">Acknowledge</button>');    
                     }
                 }
-                $('#mainModalHeader').removeClass();
-                $('#mainModalHeader').addClass('modal-header');
-                var NewClass = 'btn-'+alerts[i].type;
-                $('#mainModalHeader').addClass(NewClass);
+                $('#mainModalDialog').removeClass();
+                $('#mainModalDialog').addClass('modal-dialog');
+                var NewClass = '.bootstrap-dialog.type-'+alerts[i].type;
+                $('#mainModalDialog').addClass(NewClass);
                 $('#mainModalLabel').html(alerts[i].title);
                 $('#mainModalBody').html(alerts[i].message);
                 $('#mainModal').modal('show');
