Modified Modal UPS

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -220,8 +220,8 @@
                     }
                 }
                 $('#mainModalDialog').removeClass();
-                $('#mainModalDialog').addClass('modal-dialog');
-                var NewClass = 'bootstrap-dialog.type-'+alerts[i].type;
+                $('#mainModalDialog').addClass('modal-dialog boostrap-dialog');
+                var NewClass = 'type-'+alerts[i].type;
                 $('#mainModalDialog').addClass(NewClass);
                 $('#mainModalLabel').html(alerts[i].title);
                 $('#mainModalBody').html(alerts[i].message);
