--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -221,7 +221,7 @@
                 }
                 $('#mainModalDialog').removeClass();
                 $('#mainModalDialog').addClass('modal-dialog boostrap-dialog');
-                var NewClass = 'type-'+alerts[i].type;
+                var NewClass = 'boostrap-dialog.type-'+alerts[i].type;
                 $('#mainModalDialog').addClass(NewClass);
                 $('#mainModalLabel').html(alerts[i].title);
                 $('#mainModalBody').html(alerts[i].message);
