modified modal css

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -220,8 +220,8 @@
                     }
                 }
                 $('#mainModalHeader').removeClass();
-                $('#mainModalHeader').addClass('modal-header boostrap-dialog');
-                var NewClass = 'boostrap-dialog.type-'+alerts[i].type;
+                $('#mainModalHeader').addClass('modal-header bootstrap-dialog');
+                var NewClass = 'bootstrap-dialog.type-'+alerts[i].type;
                 $('#mainModalHeader').addClass(NewClass);
                 $('#mainModalLabel').html(alerts[i].title);
                 $('#mainModalBody').html(alerts[i].message);
