--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -52,11 +52,33 @@
 }
 
 .modal-warning {
-    .btn-warning
+    color: #fff;
+    background-color: #f0ad4e;
+    border-color: #eea236;
 }
 
 .modal-danger {
-    .btn-danger
+    color: #fff;
+    background-color: #d9534f;
+    border-color: #d43f3a;
+}
+
+.modal-default {
+    color: #333;
+    background-color: #fff;
+    border-color: #ccc;
+}
+
+.modal-info {
+    color: #fff;
+    background-color: #5bc0de;
+    border-color: #46b8da;
+}
+
+.modal-primary {
+    color: #fff;
+    background-color: #337ab7;
+    border-color: #2e6da4;
 }
 
 @-webkit-keyframes argh-my-eyes {
