Modified modal datetime

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -235,7 +235,7 @@
             
             function loadAlertModal(alerts, i)
             {   
-                var timestamp = new Date(alerts[i].created);
+                var timestamp = new Date(alerts[i].created.date);
                 
                 if(alerts.length <= 1)
                 {
