--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -236,6 +236,7 @@
             function loadAlertModal(alerts, i)
             {   
                 var timestamp = new Date(alerts[i].created.date);
+                timestamp = timestamp - getTimezoneOffset();
                 
                 if(alerts.length <= 1)
                 {
