--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -244,11 +244,11 @@
                 } else {
                     if(i-1 < 0)
                     {
-                        $('#mainModalFooter').html(created.toLocaleString()+' <button type="button" class="btn btn-default" id="alerts-next" onclick="nextAlert();">Next</button><button type="button" class="btn btn-primary" onclick="Acknowledge('+alerts[i].id+');">Acknowledge</button>');
+                        $('#mainModalFooter').html(created.toUTCString()+' <button type="button" class="btn btn-default" id="alerts-next" onclick="nextAlert();">Next</button><button type="button" class="btn btn-primary" onclick="Acknowledge('+alerts[i].id+');">Acknowledge</button>');
                     } else if(i+1 >= alerts.length) {
-                        $('#mainModalFooter').html(created.toISOString()+' <button type="button" class="btn btn-default" id="alerts-previous" onclick="previousAlert();">Previous</button><button type="button" class="btn btn-primary" onclick="Acknowledge('+alerts[i].id+');">Acknowledge</button>');
+                        $('#mainModalFooter').html(created.toUTCString()+' <button type="button" class="btn btn-default" id="alerts-previous" onclick="previousAlert();">Previous</button><button type="button" class="btn btn-primary" onclick="Acknowledge('+alerts[i].id+');">Acknowledge</button>');
                     } else {
-                        $('#mainModalFooter').html(created.toString()+' <button type="button" class="btn btn-default" id="alerts-previous" onclick="previousAlert();">Previous</button><button type="button" class="btn btn-default" id="alerts-next" onclick="nextAlert();">Next</button><button type="button" class="btn btn-primary" onclick="Acknowledge('+alerts[i].id+');">Acknowledge</button>');    
+                        $('#mainModalFooter').html(created.toUTCString()+' <button type="button" class="btn btn-default" id="alerts-previous" onclick="previousAlert();">Previous</button><button type="button" class="btn btn-default" id="alerts-next" onclick="nextAlert();">Next</button><button type="button" class="btn btn-primary" onclick="Acknowledge('+alerts[i].id+');">Acknowledge</button>');    
                     }
                 }
                 $('#mainModalHeader').removeClass();
