--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -245,11 +245,11 @@
                 } else {
                     if(i-1 < 0)
                     {
-                        $('#mainModalFooter').html(createdString+' <button type="button" class="btn btn-default" id="alerts-next" onclick="nextAlert();">Next</button><button type="button" class="btn btn-primary" onclick="Acknowledge('+alerts[i].id+');">Acknowledge</button>');
+                        $('#mainModalFooter').html('<div class="row"><div class="col-md-5">'+createdString+'</div><div class="col-md-2 col-md-offset-2"><button type="button" class="btn btn-default" id="alerts-next" onclick="nextAlert();">Next</button></div><div class="col-md-3"><button type="button" class="btn btn-primary" onclick="Acknowledge('+alerts[i].id+');">Acknowledge</button></div></div>');
                     } else if(i+1 >= alerts.length) {
-                        $('#mainModalFooter').html(createdString+' <button type="button" class="btn btn-default" id="alerts-previous" onclick="previousAlert();">Previous</button><button type="button" class="btn btn-primary" onclick="Acknowledge('+alerts[i].id+');">Acknowledge</button>');
+                        $('#mainModalFooter').html('<div class="row"><div class="col-md-5">'+createdString+'</div><div class="col-md-2"><button type="button" class="btn btn-default" id="alerts-previous" onclick="previousAlert();">Previous</button></div><div class="col-md-3 col-md-offset-2"><button type="button" class="btn btn-primary" onclick="Acknowledge('+alerts[i].id+');">Acknowledge</button></div></div>');
                     } else {
-                        $('#mainModalFooter').html(createdString+' <button type="button" class="btn btn-default" id="alerts-previous" onclick="previousAlert();">Previous</button><button type="button" class="btn btn-default" id="alerts-next" onclick="nextAlert();">Next</button><button type="button" class="btn btn-primary" onclick="Acknowledge('+alerts[i].id+');">Acknowledge</button>');    
+                        $('#mainModalFooter').html('<div class="row"><div class="col-md-5">'+createdString+'</div><div class="col-md-2"><button type="button" class="btn btn-default" id="alerts-previous" onclick="previousAlert();">Previous</button></div><div class="col-md-2"><button type="button" class="btn btn-default" id="alerts-next" onclick="nextAlert();">Next</button><button type="button" class="btn btn-primary" onclick="Acknowledge('+alerts[i].id+');">Acknowledge</button></div></div>');    
                     }
                 }
                 $('#mainModalHeader').removeClass();
