--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -237,7 +237,7 @@
             {   
                 //2016-09-18 00:00:17.000000
                 //var created = new Date(alerts[i].created.date+' '+alerts[i].created.timezone);
-                var createdString = moment(alerts[i].created.date, "YYYY-MM-DD HH:mm:ss.SSSSSS").format("LTS ll");
+                var createdString = moment.utc(alerts[i].created.date, "YYYY-MM-DD HH:mm:ss.SSSSSS").format("HH:mm:ss ll");
                 //var createdString = created.toLocaleTimeString()+' - '+created.toDateString();
                 //var created = new Date(timestamp - timestamp.getTimezoneOffset());
                 
