--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -234,12 +234,8 @@
             }
             
             function loadAlertModal(alerts, i)
-            {   
-                //2016-09-18 00:00:17.000000
-                //var created = new Date(alerts[i].created.date+' '+alerts[i].created.timezone);
+            {
                 var createdString = moment.utc(alerts[i].created.date, "YYYY-MM-DD HH:mm:ss.SSSSSS").local().format("HH:mm:ss ll");
-                //var createdString = created.toLocaleTimeString()+' - '+created.toDateString();
-                //var created = new Date(timestamp - timestamp.getTimezoneOffset());
                 
                 if(alerts.length <= 1)
                 {
@@ -291,6 +287,7 @@
                     loadAlertModal(alertData, alertNumber);
                 } else {
                     $('#mainModal').modal('hide');
+                    display = false;
                 }
                 AlertCheck();
             }
@@ -300,11 +297,14 @@
                 $('#HeaderWeather').hide();
                 
                 updateClock();
-                updateWeatherWarning();
+                //updateWeatherWarning();
                 setInterval('updateClock()', 1000);
                 setInterval('AlertUpdate()', 5000);
                 setInterval('AlertCheck()', 1000);
-                setInterval('updateWeatherWarning()', 30000);
+                //setInterval('updateWeatherWarning()', 30000);
+                $('#mainModal').on('hidden.bs.modal', function (e) {
+                    display = false;
+                });
             });
 
             $(document).ready(function()
